enterprise-suite/tests/resources/alert-nc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nc-pod-service
spec:
  ports:
    - port: 58585
      targetPort: 58585
  selector:
    app: nc-pod
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nc-pod
spec:
  template:
    metadata:
      labels:
        app: nc-pod
    spec:
      containers:
      - name: nc-pod
        image: appropriate/nc
        args: [ "-lk", "-n", "58585" ]
