enterprise-suite/tests/resources/app.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: es-test
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: es-test
      annotations:
        consolebackende2e.io/scrape: "true"
        consolebackende2e.io/port: "8080"
    spec:
      containers:
        # source: https://github.com/lightbend/k8s-explore/tree/master/query/nan
        - name: es-test
          image: lightbend-docker-registry.bintray.io/enterprise-suite/es-test:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: metrics
