enterprise-suite/tests/resources/app_service_with_only_endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: es-test-service-with-only-endpoints
subsets:
  - addresses:
      -  ip: 192.168.99.1
    ports:
      - name: metrics
        protocol: TCP
        port: 9001
---
apiVersion: v1
kind: Service
metadata:
  name: es-test-service-with-only-endpoints
  annotations:
    "consolebackende2e.io/scrape": "true"
spec:
  ports:
    - name: metrics
      protocol: TCP
      port: 9001
      targetPort: 9001
