enterprise-suite/tests/resources/app_with_service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: es-test-via-service
  annotations:
    console-backend-e2e.io/scrape: "true"
spec:
  ports:
    - port: 80
      targetPort: 8080
      name: metrics
  selector:
    app: es-test
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: es-test-via-service
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: es-test
        test: prometheus-test
    spec:
      containers:
        # source: https://github.com/lightbend/k8s-explore/tree/master/query/nan
        - name: es-test
          image: lightbend-docker-registry.bintray.io/enterprise-suite/es-test:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
