enterprise-suite/tests/resources/ingress-test.template.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-test
  namespace: lightbend
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: minikube.ingress.test
    http:
      paths:
      - path: {{PATH}}
        backend:
          serviceName: expose-es-console
          servicePort: {{PORT}}
