enterprise-suite/tests/resources/ingress-test.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-test
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: minikube.ingress.test
    http:
      paths:
      - path: /es-console
        backend:
          serviceName: console-server
          servicePort: 80
